Cambie la frontend
Todavía no se puede usar todo anónimamente, pero estoy cerca.

--- a/templates/aboutus.html
+++ b/templates/aboutus.html
@@ -12,27 +12,27 @@
       <h6 style="">Frases que nos identifican</h6>
       <blockquote class="blockquote text-center">
         <p class="mb-0">"Es una mala idea pero es mi idea"</span></p>
-        <footer class="blockquote-footer">un empleado de <cite title="Source Title">ThunderNetwork</cite>.</footer>
+        <footer class="blockquote-footer">un empleado de <cite title="Source Title">FlashLightning</cite>.</footer>
       </blockquote>
       <blockquote class="blockquote text-center">
         <p class="mb-0">"Todo el mundo es gangster hasta que la vida pierde sentido"</span></p>
-        <footer class="blockquote-footer">un empleado de <cite title="Source Title">ThunderNetwork</cite>.</footer>
+        <footer class="blockquote-footer">un empleado de <cite title="Source Title">FlashLightning</cite>.</footer>
       </blockquote>
       <blockquote class="blockquote text-center">
         <p class="mb-0">"Embrace the autism"</span></p>
-        <footer class="blockquote-footer">un empleado de <cite title="Source Title">ThunderNetwork</cite>.</footer>
+        <footer class="blockquote-footer">un empleado de <cite title="Source Title">FlashLightning</cite>.</footer>
       </blockquote>
       <blockquote class="blockquote text-center">
         <p class="mb-0">"He fried his brain"</span></p>
-        <footer class="blockquote-footer">un empleado de <cite title="Source Title">ThunderNetwork</cite>.</footer>
+        <footer class="blockquote-footer">un empleado de <cite title="Source Title">FlashLightning</cite>.</footer>
       </blockquote>
       <blockquote class="blockquote text-center">
         <p class="mb-0">"This is big bullshit"</span></p>
-        <footer class="blockquote-footer">un empleado de <cite title="Source Title">ThunderNetwork</cite>.</footer>
+        <footer class="blockquote-footer">un empleado de <cite title="Source Title">FlashLightning</cite>.</footer>
       </blockquote>
       <blockquote class="blockquote text-center">
-        <p class="mb-0">"The ThunderNetwork Experience"</span></p>
-        <footer class="blockquote-footer">un empleado de <cite title="Source Title">ThunderNetwork</cite>.</footer>
+        <p class="mb-0">"The FlashLightning Experience"</span></p>
+        <footer class="blockquote-footer">un empleado de <cite title="Source Title">FlashLightning</cite>.</footer>
       </blockquote>
 
     </div>
