--- a/templates/upload.html
+++ b/templates/upload.html
@@ -3,7 +3,7 @@
 <h1>{% block title %}Subir un Catálogo{% endblock %}</h1>
 
 {% block content %}
-  <div class="container-fluid">
+  <div class="container w-75">
     <div class="row justify-content-center" style="padding: 0px;">
         <div class="col-lg-10">
           <h2>Crear una nueva publicación</h2>
