--- a/templates/base.html
+++ b/templates/base.html
@@ -1,4 +1,3 @@
-
 <!doctype html>
 <html lang="en">
 	<head>
@@ -21,23 +20,25 @@
 		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
 		<!-- Font Awesome -->
 		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css">
+  <!-- Creo que nunca usé esto asegurarse para luego borrarlo -->
 	{% block head %}{% endblock %}
+  {% from "_formhelpers.html" import render_field %}
 	</head>
 
 	<body>
 		<div class="container-fluid">
 			<div class="row justify-content-center">
 														<div class="col-12 col-md-10 col-lg-5">
-																<form class="card card-sm">
+																<form method="GET" action="/search" class="card card-sm">
 																		<div class="card-body row no-gutters align-items-center">
 																				<div class="col-auto">
 																						<i class="fas fa-search h4 text-body"></i>
 																				</div>
 																				<!--end of col-->
 																				<div class="col">
-																						<input class="form-control form-control-lg form-control-borderless" type="search" placeholder="Buscar por tags">
+                                          <input name="q" type="search" class="form-control form-control-lg form-control-borderless", placeholder="Buscar por tags"/>
 																				</div>
-																				<!--end of col-->
+																			<!--end of col-->
 																				<div class="col-auto">
 																						<button class="btn btn-lg btn-primary" type="submit">Buscar</button>
 																				</div>
@@ -71,7 +72,7 @@
         </ul>
 						<ul class="navbar-nav navbar-right ml-auto">
               <li class="nav-item ">
-                <a class="nav-link" href="{% if not current_user.is_authenticated %}/login{%else%}/upload{% endif %}">
+                <a class="nav-link" href="/upload">
                   <i class="fas fa-plus"></i>
                 </a>
               </li>
