--- a/templates/view.html
+++ b/templates/view.html
@@ -47,7 +47,7 @@
               </div>
             </div>
             {{ render_field(form.comment, class='form-control', placeholder='Comentario') }}
-            {{ render_field(form.password, class='form-control', placeholder='Contraseña (se usa para borrar un comentario)') }}
+            {{ render_field(form.password, class='form-control', placeholder='Contraseña (te identifica para después poder borrar el comentario)') }}
             {{ render_field(form.csrf_token) }}
           </form>
       </div>
