--- a/templates/view.html
+++ b/templates/view.html
@@ -48,6 +48,7 @@
             </div>
             {{ render_field(form.comment, class='form-control', placeholder='Comentario') }}
             {{ render_field(form.password, class='form-control', placeholder='Contraseña (te identifica para después poder borrar el comentario)') }}
+            <input name="YouTube" class="form-control" type="text" placeholder="YouTube Embed (no implementado)"/>
             {{ render_field(form.csrf_token) }}
           </form>
       </div>
