--- a/templates/home.html
+++ b/templates/home.html
@@ -4,27 +4,35 @@
 {% block content %}
   <div style="background: #eee;">
   {% for post in posts %}
-      <details class="w-75 m-auto">
-          <summary class="h3">{{post.subject}} <span class="text-primary float-right">Vistas: {{post.views}}</span></summary>
-        <a href="/view/{{post.id}}">
-        <div style="border-left: 5px solid #eee; background-color: #f9f9f9;">
-          <div class="" style="overflow: hidden; margin-left: 20px; ">
+      <details class="w-75 m-auto" open>
+        <summary class="h4" style="margin-bottom: 10px;">{{post.subject}}</summary>
+        <div style="background-color: #ebebeb; margin-bottom: 15px;">
+          <div class="bg-light" style="overflow: hidden;">
             {% for img in post.files %}
+						<a target="_blank" href="/view/{{post.id}}"/>
+							<strong>Abrir hilo</strong>
+						</a>
+						| 
+						<a target="_blank" href="{{ url_for ('static', filename='user_data/images/')}}{{img.file}}"/>
+							<strong>Abrir imágen</strong>
+						</a>
               <!-- Chequear la extensión primero antes de mostrar img -->
-              {% if img.extension in ('jpg', 'gif', 'jpeg', 'png') %}
-                  <img height=150 src="{{ url_for ('static', filename='user_data/images/')}}{{img.file}}"/>
-              {% elif img.extension in ('webm', 'mp4') %}
-                <video height=200 src="{{ url_for ('static', filename='user_data/images/')}}{{img.file}}" controls/>
-                  Your browser does not support the video tag.
-                </video>
-              {% endif %}
+              <div class="float-left">
+								{% if img.extension in ('jpg', 'gif', 'jpeg', 'png') %}
+										<img style="height: 150; max-width: 150px" style="float:left;" src="{{ url_for ('static', filename='user_data/images/')}}{{img.file}}"/>
+								{% elif img.extension in ('webm', 'mp4') %}
+									<video style="height: 150; max-width: 150px" src="{{ url_for ('static', filename='user_data/images/')}}{{img.file}}" controls/>
+										Your browser does not support the video tag.
+									</video>
+								{% endif %}
+              </div>
             {% endfor %}
-            <br/>
-            <span class="card-text ">{{post.desc}}</span>
-
+            <p>{{post.desc[:250]}}...</p>
+						<strong class="text-muted ">Vistas: {{post.views}}</strong>
+						<strong class="text-primary">Comentarios: 43</strong>
+						<br/>
           </div>
         </div>
-        </a>
       </details>
       {% else %}
         <h4>No hay entradas.</h4>
