--- a/static/css/style_dark.css
+++ b/static/css/style_dark.css
@@ -1,3 +1,4 @@
+body { background-color: #eee!important; }
 .webs-catalog {
   padding: 15px;
   border-radius: 5px;
@@ -17,3 +18,5 @@
     border: 2px solid #999;
     color: black;
 }
+.span a { color: white; }
+
