--- a/templates/view.html
+++ b/templates/view.html
@@ -5,7 +5,7 @@
 
 {% block content %}
   <div class="container">
-    <a href="javascript:history.back()"><b>VOLVER</b></a> | 
+    <a href="/"><b>INICIO</b></a> | 
     <a href="/delete/post/{{post.id}}"><b>BORRAR</b></a> 
     <h3>{{post.subject}}</h3>
     <h5>Autor: <a href="/user/{{post.autor}}">{{post.autor}}</a></h5>
