--- a/static/css/style_dark.css
+++ b/static/css/style_dark.css
@@ -1,4 +1,3 @@
-body { background-color: #eee!important; }
 .webs-catalog {
   padding: 15px;
   border-radius: 5px;
@@ -19,4 +18,11 @@ body { background-color: #eee!important; }
     color: black;
 }
 .span a { color: white; }
+
+* {box-sizing: border-box;}
+
+body {
+  margin: 0;
+  font-family: Arial, Helvetica, sans-serif;
+}
 
