--- a/templates/base.html
+++ b/templates/base.html
@@ -44,7 +44,7 @@
 				<ul class="navbar-nav navbar-center">
 					<form class="form-inline my-2 my-lg-0" action="/search">
 						<input class="form-control mr-sm-2" name="q" type="search" placeholder="Buscar por tags" aria-label="Search">
-						<button class="btn btn-outline-primary my-2 my-sm-0" type="submit">Buscar</button>
+            <button class="btn btn-outline-primary my-2 my-sm-0" type="submit"><i class="fas fa-search"></i></button>
 					</form>
 				</ul>
 						<ul class="navbar-nav navbar-right ml-auto">
@@ -53,6 +53,28 @@
                   <i class="fas fa-plus"></i> Crear
                 </a>
               </li>
+							<li class="nav-item dropdown">
+								<a href="#" data-toggle="dropdown" class="nav-link dropdown-toggle "><i class="fas fa-plus"></i> Crear</a>
+												<div class="dropdown-menu action-form">
+									<form action="/examples/actions/confirmation.php" method="post">
+										<p class="hint-text">Sign in with your social media account</p>
+										<div class="form-group social-btn clearfix">
+											<a href="#" class="btn btn-secondary facebook-btn float-left"><i class="fa fa-facebook"></i> Facebook</a>
+											<a href="#" class="btn btn-secondary twitter-btn float-right"><i class="fa fa-twitter"></i> Twitter</a>
+										</div>
+										<div class="or-seperator"><b>or</b></div>
+										<div class="form-group">
+											<input type="text" class="form-control" placeholder="Username" required="required">
+										</div>
+										<div class="form-group">
+											<input type="password" class="form-control" placeholder="Password" required="required">
+										</div>
+										<input type="submit" class="btn btn-primary btn-block" value="Login">
+										<div class="text-center mt-2">
+											<a href="#">Forgot Your password?</a>
+										</div>
+									</form>
+							</li>
 							<li class="nav-item dropdown {% if nbar in ('action1','action2','action3') %}active{% endif %}">
 									<a class="nav-link dropdown-toggle btn " href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     {% if current_user.is_authenticated %}
