--- a/templates/home.html
+++ b/templates/home.html
@@ -9,7 +9,7 @@
         <div style="margin-bottom: 15px;">
           <div class="bg-light" style="overflow: hidden;">
             {% for img in post.files %}
-						<a target="_blank" href="/view/{{post.id}}"/>
+						<a href="/view/{{post.id}}"/>
 							<strong>Abrir hilo</strong>
 						</a>
 						| 
