--- a/templates/base.html
+++ b/templates/base.html
@@ -28,7 +28,7 @@
 
 	<body>
     <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
-      <a class="navbar-brand" href="/">FlashLightning</a>
+      <a class="navbar-brand text-primary" href="/">FlashLightning</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -48,30 +48,22 @@
 					</form>
 				</ul>
 						<ul class="navbar-nav navbar-right ml-auto">
-              <li class="nav-item">
-                <a class="nav-link btn" role="button" href="/upload">
-                  <i class="fas fa-plus"></i> Crear
-                </a>
-              </li>
-							<li class="nav-item dropdown">
+							<li class="nav-item dropdown dropleft">
 								<a href="#" data-toggle="dropdown" class="nav-link dropdown-toggle "><i class="fas fa-plus"></i> Crear</a>
 												<div class="dropdown-menu action-form">
 									<form action="/examples/actions/confirmation.php" method="post">
-										<p class="hint-text">Sign in with your social media account</p>
-										<div class="form-group social-btn clearfix">
-											<a href="#" class="btn btn-secondary facebook-btn float-left"><i class="fa fa-facebook"></i> Facebook</a>
-											<a href="#" class="btn btn-secondary twitter-btn float-right"><i class="fa fa-twitter"></i> Twitter</a>
-										</div>
-										<div class="or-seperator"><b>or</b></div>
 										<div class="form-group">
-											<input type="text" class="form-control" placeholder="Username" required="required">
+											<input type="text" class="form-control" placeholder="Título" required="required">
 										</div>
 										<div class="form-group">
-											<input type="password" class="form-control" placeholder="Password" required="required">
+                      <textarea name="desc" rows="4" placeholder="Descripción" cols="50"></textarea>
 										</div>
-										<input type="submit" class="btn btn-primary btn-block" value="Login">
+										<div class="form-group">
+											<input type="password" class="form-control" placeholder="Contraseña" required="required">
+										</div>
+										<input type="submit" class="btn btn-primary btn-block" value="Crear">
 										<div class="text-center mt-2">
-											<a href="#">Forgot Your password?</a>
+											<a href="/upload">Pantalla Completa</a>
 										</div>
 									</form>
 							</li>
